VERSION         DESCRIPTION
-----------------------------------------------------------------------------
0.9.9         - grubconfig now allows MBR installation to first hard drive or root hard drive
              - fixups in timeconfig text
0.9.8         - grubconfig has been modified to work with GRUB2
              - fix handling of localtime in timeconfig
              - make UTC the default time setting in timeconfig
0.9.7         - netconfig no longer creates /etc/HOSTNAME
              - grubconfig creates UUID's in menu.lst
0.9.6         - netconfig: no longer blocks till the end of the first profile
		startup (use netconfig-wait-online.service for legacy daemons)
              - grubconfig: initrd support
0.9.5         - netconfig: ethx:y is available when ethx is
              - netconfig: add cgroups support
              - grubconfig: enable splash by default
0.9.4         - netconfig:
                - systemd support
                - subscribe to udev netlink socket to start interfaces
                  right after they show up
              - retire xconfig, it's no longer necessary
0.9.3         - netconfig:
                - supports for raw wpa psk hashes
                - learned scanning for essids in wpa config
                - writes /etc/hostname distro-independent config
              - grubconfig learned how to deal with /etc/mtab being a
                symlink
              - timeconfig learned how to set clock to utc when using
                systemd
0.9.2         - netconfig is now compatible with wvdial to support mobile
                3g connections
              - added virtio support to grubconfig
0.9.1         - wpa fixes
              - netconfig spelling fixes
              - raidconfig now uses mdadm --metadata 0.90
0.9.0         - fix dualhead setups in xconfig
              - kde4 support in xwmconfig
              - buildsystem cleanup
0.8.9         - grubconfig now supports suspend to disk